--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,10 @@ find_package(expat REQUIRED)
 
 INCLUDE_DIRECTORIES ( ${EXPAT_INCLUDE_DIRS} )
 
+add_subdirectory(Fest)
+
 add_executable(decodefest cppmain.cpp cppmain.h decodefest.cpp FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h)
 
+target_link_libraries(decodefest fest)
 target_link_libraries(decodefest -lexpat)
 target_link_libraries(decodefest ${libzip_LIBRARIES})
