--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(fest OBJECT Fest.cpp Fest.h)
+add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h KatLegemiddelMerkevare.cpp KatLegemiddelMerkevare.h TidspunktObject.cpp TidspunktObject.h)
