Handle LegemiddelMerkevare and pack into in memory struct/class format.

--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h KatLegemiddelMerkevare.cpp KatLegemiddelMerkevare.h TidspunktObject.cpp TidspunktObject.h StatusObject.cpp StatusObject.h)
+add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h KatLegemiddelMerkevare.cpp KatLegemiddelMerkevare.h TidspunktObject.cpp TidspunktObject.h StatusObject.cpp StatusObject.h XmlLegemiddelMerkevare.cpp XmlLegemiddelMerkevare.h)
