--- a/Struct/Decoded/CMakeLists.txt
+++ b/Struct/Decoded/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(decoded OBJECT Status.cpp Status.h OppfLegemiddelMerkevare.cpp OppfLegemiddelMerkevare.h LegemiddelMerkevare.cpp LegemiddelMerkevare.h Atc.cpp Atc.h Legemiddel.cpp Legemiddel.h)
+add_library(decoded OBJECT Status.cpp Status.h OppfLegemiddelMerkevare.cpp OppfLegemiddelMerkevare.h LegemiddelMerkevare.cpp LegemiddelMerkevare.h Atc.cpp Atc.h Legemiddel.cpp Legemiddel.h Reseptgruppe.cpp Reseptgruppe.h ValueWithDistinguishedName.cpp ValueWithDistinguishedName.h)
