--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -6,4 +6,4 @@ add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h
         XmlLegemiddel.cpp XmlLegemiddel.h XmlValueWithDistinguishedName.h XmlValueWithCodeSet.h XmlContentElement.h
         XmlPreparattypeObject.cpp XmlPreparattypeObject.h XmlAdministreringLegemiddel.cpp XmlAdministreringLegemiddel.h
         XmlSortertVirkestoffMedStyrke.cpp XmlSortertVirkestoffMedStyrke.h XmlSortering.cpp XmlSortering.h
-        XmlRefVirkestoffMedStyrke.cpp XmlRefVirkestoffMedStyrke.h)
+        XmlRefVirkestoffMedStyrke.cpp XmlRefVirkestoffMedStyrke.h XmlProduktInfo.cpp XmlProduktInfo.h)
