--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -14,4 +14,5 @@ add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h
         XmlLegemiddelpakning.cpp XmlLegemiddelpakning.h XmlPakningsinfo.cpp XmlPakningsinfo.h
         XmlRefLegemiddelMerkevare.cpp XmlRefLegemiddelMerkevare.h XmlMarkedsforingsinfo.cpp XmlMarkedsforingsinfo.h
         XmlPrisVare.cpp XmlPrisVare.h XmlPakningskomponent.cpp XmlPakningskomponent.h
-        XmlPakningstype.cpp XmlPakningstype.h XmlMengde.cpp XmlMengde.h)
+        XmlPakningstype.cpp XmlPakningstype.h XmlMengde.cpp XmlMengde.h XmlRefusjon.cpp XmlRefusjon.h
+        XmlGyldigFraDato.cpp XmlGyldigFraDato.h)
