--- a/Fest/CMakeLists.txt
+++ b/Fest/CMakeLists.txt
@@ -27,4 +27,5 @@ add_library(fest OBJECT Fest.cpp Fest.h FestIdObject.cpp FestIdObject.h
         XmlRefVilkar.cpp XmlRefVilkar.h XmlForskrivesTilDato.cpp XmlForskrivesTilDato.h XmlVilkar.cpp XmlVilkar.h
         KatVarselSlv.cpp KatVarselSlv.h XmlVarselSlv.cpp XmlVarselSlv.h XmlFraDato.cpp XmlFraDato.h
         XmlLenke.cpp XmlLenke.h XmlReferanseelement.cpp XmlReferanseelement.h KatKodeverk.cpp KatKodeverk.h
-        XmlInfo.cpp XmlInfo.h XmlElement.cpp XmlElement.h)
+        XmlInfo.cpp XmlInfo.h XmlElement.cpp XmlElement.h KatByttegruppe.cpp KatByttegruppe.h XmlKode.cpp XmlKode.h
+        XmlByttegruppe.cpp XmlByttegruppe.h)
