--- a/Struct/Decoded/CMakeLists.txt
+++ b/Struct/Decoded/CMakeLists.txt
@@ -22,4 +22,6 @@ add_library(decoded OBJECT Status.cpp Status.h OppfLegemiddelMerkevare.cpp OppfL
         Legemiddeldose.cpp Legemiddeldose.h PakningskomponentInfo.cpp PakningskomponentInfo.h
         OppfInteraksjonBase.cpp OppfInteraksjonBase.h Interaksjon.cpp Interaksjon.h
         OppfInteraksjon.cpp OppfInteraksjon.h Referanse.cpp Referanse.h Substansgruppe.cpp Substansgruppe.h
-        Substans.cpp Substans.h InteraksjonIkkeVurdert.cpp InteraksjonIkkeVurdert.h)
+        Substans.cpp Substans.h InteraksjonIkkeVurdert.cpp InteraksjonIkkeVurdert.h
+        OppfStrDosering.cpp OppfStrDosering.h Kortdose.cpp Kortdose.h Legemiddelforbruk.cpp Legemiddelforbruk.h
+        DoseFastTidspunkt.cpp DoseFastTidspunkt.h Dosering.cpp Dosering.h FastDose.cpp FastDose.h)
