--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ INCLUDE_DIRECTORIES ( ${EXPAT_INCLUDE_DIRS} )
 
 add_subdirectory(Fest)
 add_subdirectory(Struct/Decoded)
+add_subdirectory(Struct/Packed)
+add_subdirectory(Test/Struct/Packed)
 
 add_executable(decodefest cppmain.cpp cppmain.h decodefest.cpp FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h)
 
