List storage for serializing.

--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -1,4 +1,4 @@
 set(CMAKE_CXX_STANDARD 20)
 
 add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.h PString.cpp PString.h
-        FestUuid.cpp FestUuid.h)
+        FestUuid.cpp FestUuid.h FestUuidList.cpp FestUuidList.h GenericListStorage.h)
