Generate legemiddel merkevare in binary format.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,10 @@ add_subdirectory(Struct/Decoded)
 add_subdirectory(Struct/Packed)
 add_subdirectory(Test/Struct/Packed)
 
-add_executable(decodefest cppmain.cpp cppmain.h decodefest.cpp FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h)
+add_executable(decodefest cppmain.cpp cppmain.h decodefest.cpp FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h FestSerializer.cpp FestSerializer.h)
 
 target_link_libraries(decodefest fest)
 target_link_libraries(decodefest decoded)
+target_link_libraries(decodefest packed)
 target_link_libraries(decodefest -lexpat)
 target_link_libraries(decodefest ${libzip_LIBRARIES})
