--- a/Struct/Decoded/CMakeLists.txt
+++ b/Struct/Decoded/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(decoded OBJECT Status.cpp Status.h OppfLegemiddelMerkevare.cpp OppfLegemiddelMerkevare.h
+add_library(decoded OBJECT Status.h OppfLegemiddelMerkevare.cpp OppfLegemiddelMerkevare.h
         LegemiddelMerkevare.cpp LegemiddelMerkevare.h Atc.h Legemiddel.cpp Legemiddel.h Reseptgruppe.h
         ValueWithDistinguishedName.cpp ValueWithDistinguishedName.h ValueWithCodeSet.cpp ValueWithCodeSet.h
         LegemiddelformKort.h Preparattype.h AdministreringLegemiddel.cpp AdministreringLegemiddel.h
@@ -24,4 +24,4 @@ add_library(decoded OBJECT Status.cpp Status.h OppfLegemiddelMerkevare.cpp OppfL
         OppfInteraksjon.cpp OppfInteraksjon.h Referanse.cpp Referanse.h Substansgruppe.cpp Substansgruppe.h
         Substans.cpp Substans.h InteraksjonIkkeVurdert.cpp InteraksjonIkkeVurdert.h
         OppfStrDosering.cpp OppfStrDosering.h Kortdose.cpp Kortdose.h Legemiddelforbruk.cpp Legemiddelforbruk.h
-        DoseFastTidspunkt.cpp DoseFastTidspunkt.h Dosering.cpp Dosering.h FastDose.cpp FastDose.h)
+        DoseFastTidspunkt.cpp DoseFastTidspunkt.h Dosering.cpp Dosering.h FastDose.cpp FastDose.h Oppf.cpp Oppf.h)
