--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -8,4 +8,10 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         PLegemiddel.cpp PLegemiddel.h PAdministreringLegemiddel.cpp PAdministreringLegemiddel.h
         ValueWithCodesetList.cpp ValueWithCodesetList.h PLegemiddelCore.cpp PLegemiddelCore.h
         ValueWithDistinguishedNameList.cpp ValueWithDistinguishedNameList.h
-        POppfLegemiddelMerkevare.cpp POppfLegemiddelMerkevare.h)
+        POppfLegemiddelMerkevare.cpp POppfLegemiddelMerkevare.h POppfLegemiddelpakning.cpp POppfLegemiddelpakning.h
+        PLegemiddelpakning.cpp PLegemiddelpakning.h PPakningsinfo.cpp PPakningsinfo.h PValueUnit.cpp PValueUnit.h
+        PPakningskomponentInfo.cpp PPakningskomponentInfo.h PakningsinfoList.cpp PakningsinfoList.h
+        PPrisVare.cpp PPrisVare.h PrisVareList.cpp PrisVareList.h PMarkedsforingsinfo.cpp PMarkedsforingsinfo.h
+        PRefusjon.cpp PRefusjon.h PPakningByttegruppe.cpp PPakningByttegruppe.h
+        PPakningskomponent.cpp PPakningskomponent.h PPakningsinfo.cpp PPakningsinfo.h
+        PakningskomponentList.cpp PakningskomponentList.h)
