To compile on FreeBSD.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ pkg_check_modules(libzip REQUIRED libzip)
 
 find_package(expat REQUIRED)
 
+find_package(Boost REQUIRED)
+
 INCLUDE_DIRECTORIES ( ${EXPAT_INCLUDE_DIRS} )
 
 enable_testing()
@@ -19,6 +21,12 @@ add_subdirectory(Struct/Packed)
 add_subdirectory(Test/Struct/Packed)
 
 add_executable(decodefest cppmain.cpp cppmain.h decodefest.cpp FestZip.cpp FestZip.h libzip_zip.cpp libzip_zip.h libzip_file.cpp libzip_file.h exttype_zip_file.h FestObjectStream.cpp FestObjectStream.h XMLParser.cpp XMLParser.h FestSerializer.cpp FestSerializer.h)
+
+include_directories(decodefest ${libzip_INCLUDE_DIRS} )
+
+IF(${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
+   target_link_libraries(decodefest -L/usr/local/lib)
+ENDIF(${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD")
 
 target_link_libraries(decodefest fest)
 target_link_libraries(decodefest decoded)
