Process OppfMedForbrMatr for serializing.

--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         PRefusjon.cpp PRefusjon.h PPakningByttegruppe.cpp PPakningByttegruppe.h
         PPakningskomponent.cpp PPakningskomponent.h PPakningsinfo.cpp PPakningsinfo.h
         PakningskomponentList.cpp PakningskomponentList.h PLegemiddelVirkestoff.cpp PLegemiddelVirkestoff.h
-        POppfLegemiddelVirkestoff.cpp POppfLegemiddelVirkestoff.h RefusjonList.cpp RefusjonList.h)
+        POppfLegemiddelVirkestoff.cpp POppfLegemiddelVirkestoff.h RefusjonList.cpp RefusjonList.h
+        PHandelsvare.cpp PHandelsvare.h PProduktInfoVare.cpp PProduktInfoVare.h PLeverandor.cpp PLeverandor.h
+        POppfHandelsvare.cpp POppfHandelsvare.h StringList.cpp StringList.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
