Serialize, deserialize and dump legemiddeldose.

--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         PakningskomponentList.cpp PakningskomponentList.h PLegemiddelVirkestoff.cpp PLegemiddelVirkestoff.h
         POppfLegemiddelVirkestoff.cpp POppfLegemiddelVirkestoff.h RefusjonList.cpp RefusjonList.h
         PHandelsvare.cpp PHandelsvare.h PProduktInfoVare.cpp PProduktInfoVare.h PLeverandor.cpp PLeverandor.h
-        POppfHandelsvare.cpp POppfHandelsvare.h StringList.cpp StringList.h)
+        POppfHandelsvare.cpp POppfHandelsvare.h StringList.cpp StringList.h PLegemiddeldose.cpp PLegemiddeldose.h
+        PakningskomponentInfoList.cpp PakningskomponentInfoList.h POppfLegemiddeldose.cpp POppfLegemiddeldose.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
