--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         POppfLegemiddelVirkestoff.cpp POppfLegemiddelVirkestoff.h RefusjonList.cpp RefusjonList.h
         PHandelsvare.cpp PHandelsvare.h PProduktInfoVare.cpp PProduktInfoVare.h PLeverandor.cpp PLeverandor.h
         POppfHandelsvare.cpp POppfHandelsvare.h StringList.cpp StringList.h PLegemiddeldose.cpp PLegemiddeldose.h
-        PakningskomponentInfoList.cpp PakningskomponentInfoList.h POppfLegemiddeldose.cpp POppfLegemiddeldose.h)
+        PakningskomponentInfoList.cpp PakningskomponentInfoList.h POppfLegemiddeldose.cpp POppfLegemiddeldose.h
+        PVirkestoffMedStyrke.cpp PVirkestoffMedStyrke.h POppfVirkestoffMedStyrke.cpp POppfVirkestoffMedStyrke.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
