Serialize, deserialize and dump kodeverk.

--- a/Struct/Decoded/CMakeLists.txt
+++ b/Struct/Decoded/CMakeLists.txt
@@ -24,4 +24,5 @@ add_library(decoded OBJECT Status.h OppfLegemiddelMerkevare.cpp OppfLegemiddelMe
         OppfInteraksjon.cpp OppfInteraksjon.h Referanse.cpp Referanse.h Substansgruppe.cpp Substansgruppe.h
         Substans.cpp Substans.h InteraksjonIkkeVurdert.cpp InteraksjonIkkeVurdert.h
         OppfStrDosering.cpp OppfStrDosering.h Kortdose.cpp Kortdose.h Legemiddelforbruk.cpp Legemiddelforbruk.h
-        DoseFastTidspunkt.cpp DoseFastTidspunkt.h Dosering.cpp Dosering.h FastDose.cpp FastDose.h Oppf.cpp Oppf.h)
+        DoseFastTidspunkt.cpp DoseFastTidspunkt.h Dosering.cpp Dosering.h FastDose.cpp FastDose.h Oppf.cpp Oppf.h
+        Info.cpp Info.h)
