--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -21,6 +21,9 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         PakningskomponentInfoList.cpp PakningskomponentInfoList.h POppfLegemiddeldose.cpp POppfLegemiddeldose.h
         PVirkestoffMedStyrke.cpp PVirkestoffMedStyrke.h POppfVirkestoffMedStyrke.cpp POppfVirkestoffMedStyrke.h
         PVirkestoff.cpp PVirkestoff.h POppfVirkestoff.cpp POppfVirkestoff.h PInfo.cpp PInfo.h PTerm.cpp PTerm.h
-        POppfKodeverk.cpp POppfKodeverk.h PElement.cpp PElement.h ElementList.cpp ElementList.h)
+        POppfKodeverk.cpp POppfKodeverk.h PElement.cpp PElement.h ElementList.cpp ElementList.h
+        PRefRefusjonsvilkar.cpp PRefRefusjonsvilkar.h PRefusjonsgruppe.cpp PRefusjonsgruppe.h
+        RefRefusjonsvilkarList.cpp RefRefusjonsvilkarList.h PRefusjonshjemmel.cpp PRefusjonshjemmel.h
+        POppfRefusjon.cpp POppfRefusjon.h PRefusjonskode.cpp PRefusjonskode.h RefusjonskodeList.cpp RefusjonskodeList.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
