Serialize, deserialize and dump oppf vilkar.

--- a/Struct/Packed/CMakeLists.txt
+++ b/Struct/Packed/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(packed OBJECT PackException.cpp PackException.h PFestId.cpp PFestId.
         POppfKodeverk.cpp POppfKodeverk.h PElement.cpp PElement.h ElementList.cpp ElementList.h
         PRefRefusjonsvilkar.cpp PRefRefusjonsvilkar.h PRefusjonsgruppe.cpp PRefusjonsgruppe.h
         RefRefusjonsvilkarList.cpp RefRefusjonsvilkarList.h PRefusjonshjemmel.cpp PRefusjonshjemmel.h
-        POppfRefusjon.cpp POppfRefusjon.h PRefusjonskode.cpp PRefusjonskode.h RefusjonskodeList.cpp RefusjonskodeList.h)
+        POppfRefusjon.cpp POppfRefusjon.h PRefusjonskode.cpp PRefusjonskode.h RefusjonskodeList.cpp RefusjonskodeList.h
+        PStrukturertVilkar.cpp PStrukturertVilkar.h PVilkar.cpp PVilkar.h POppfVilkar.cpp POppfVilkar.h)
 
 include_directories(packed ${Boost_INCLUDE_DIRS} )
